After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732799 - Unusual behaviour while displaying on DLNA renderers
Unusual behaviour while displaying on DLNA renderers
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.12.x
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-07-06 15:12 UTC by Pranav Kant
Modified: 2015-10-27 09:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
item-manager: Disallow setting arbitrary window modes while previewing (982 bytes, patch)
2015-10-23 09:44 UTC, Debarshi Ray
committed Details | Review
dlna-renderers-dialog: Use the correct mode changing API (1.03 KB, patch)
2015-10-23 09:45 UTC, Debarshi Ray
committed Details | Review
main-toolbar: The back button should always be the left-most element (6.09 KB, patch)
2015-10-23 09:45 UTC, Debarshi Ray
committed Details | Review
main-toolbar: Clean up (2.79 KB, patch)
2015-10-23 09:46 UTC, Debarshi Ray
committed Details | Review

Description Pranav Kant 2014-07-06 15:12:22 UTC
How to reproduce the bug:

1. go to albums
2. open any album collection
3. open any photo item
4. push to any dlna renderer.
<push is successfull but ...>
5. hit the back button on toolbar and it takes you to 'Recent' tab. You try to go to 'Albums' and there is no way to go back to album overview page. You are stuck at the current album previously clicked.

IMO, whether we are displaying the images on dlna renderer or not, it should not have any effect in how the application behaves.
Comment 1 Debarshi Ray 2015-10-23 09:44:16 UTC
Fixing this is easier after the rework in bug 737071
Comment 2 Debarshi Ray 2015-10-23 09:44:49 UTC
Created attachment 313919 [details] [review]
item-manager: Disallow setting arbitrary window modes while previewing
Comment 3 Debarshi Ray 2015-10-23 09:45:19 UTC
Created attachment 313920 [details] [review]
dlna-renderers-dialog: Use the correct mode changing API
Comment 4 Debarshi Ray 2015-10-23 09:45:44 UTC
Created attachment 313921 [details] [review]
main-toolbar: The back button should always be the left-most element
Comment 5 Debarshi Ray 2015-10-23 09:46:06 UTC
Created attachment 313922 [details] [review]
main-toolbar: Clean up
Comment 6 Debarshi Ray 2015-10-23 09:50:18 UTC
Pushed to master. Should be fixed now. Please re-open if it is not.