item-manager: Disallow setting arbitrary window modes while previewing

The only thing you can do while in the preview is to go back.

https://bugzilla.gnome.org/show_bug.cgi?id=732799